name:                fay-uri
version:             0.2.0.0
synopsis:            Persistent FFI bindings for using jsUri in Fay
homepage:            https://github.com/faylang/fay-uri
bug-reports:         https://github.com/faylang/fay-uri/issues
license:             BSD3
license-file:        LICENSE
author:              Adam Bergmark
maintainer:          adam@bergmark.nl
copyright:           2013 Adam Bergmark
category:            Web, Fay
build-type:          Simple
cabal-version:       >=1.8
data-files:          src/Uri.hs

source-repository head
  type: git
  location: https://github.com/faylang/fay-uri.git

library
  hs-source-dirs: src
  ghc-options: -Wall
  exposed-modules: Uri
  build-depends: fay-base >= 0.16
